# RAG-pipeline

./: README.md
legal_inteli_plat/: .gitignore  locate.py  requirements.txt
legal_inteli_plat/crawler/: .env.example  Dockerfile  README.md  __main__.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
legal_inteli_plat/crawler/api/: __init__.py  app.py
legal_inteli_plat/crawler/config/: __init__.py  settings.py  settings.yaml
legal_inteli_plat/crawler/crawler/: __init__.py  extractor.py  fetcher.py  listing_crawler.py
legal_inteli_plat/crawler/database/: __init__.py  session.py
legal_inteli_plat/crawler/discovery/: __init__.py  service.py
legal_inteli_plat/crawler/download/: __init__.py  manager.py
legal_inteli_plat/crawler/interfaces/: __init__.py  messaging.py  rate_limiter.py  storage.py
legal_inteli_plat/docs/: SPRINT_01_Crawler.md
legal_inteli_plat/frontend/: graph.html  index.html  layout.html
legal_inteli_plat/knowledge/: README.md  benchmark.py  build.py  build_memory.py  embed.py  entities.py  evaluate.py  kb.py  memory.py  references.py  threads.py  vector.py
legal_inteli_plat/preprocess/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.lock.txt
legal_inteli_plat/preprocess/scripts/: backfill_pdf_url.py  build_corpus_report.py  check_progress.sh  recon_camelot.py  recon_docling.py  recon_tables_mixed.py  recon_triage.py  run_corpus.py  supervise_corpus.sh
legal_inteli_plat/preprocess/sebi_preprocessing/: __init__.py  __main__.py  cli.py  config.py  inventory.py  logging_config.py  models.py  normalize.py  parse_native.py  parse_scanned.py  pipeline.py  tables.py  triage.py
legal_inteli_plat/preprocess/tests/: conftest.py  test_normalize.py  test_parse_native.py  test_parse_scanned.py  test_pipeline.py  test_tables.py  test_triage.py
legal_inteli_plat/preprocess/tests/fixtures/: README.txt
legal_inteli_plat/rag_demo/: README.md  agent.py  kb_index.py  rag.py  server.py
(+38 files in other folders)
